tests/modules/errors/invalid_import.nfu
print("I just made the import statement below me invalid.")

import "invalid"
